CSS bug fix overflow

--- a/root/assets/styles/main.css
+++ b/root/assets/styles/main.css
@@ -56,6 +56,11 @@ p>img,
     -moz-user-drag: none;
     -o-user-drag: none;
 }
+/*
+html{
+    max-width: 100vw;
+    overflow-x: hidden;
+}*/
 
 body {
     background-color: var(--bg-color-1);
@@ -79,6 +84,8 @@ header {
     flex-wrap: nowrap;
     padding: 16px;
     box-shadow: var(--card-shadow);
+    overflow: hidden;
+    width: 100vw;
 }
 
 .lum header {
@@ -154,7 +161,7 @@ footer>*{
 }
 
 footer>div{
-    margin: 10px;
+    margin: 10px 0;
 }
 
 .card {
